<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/QRImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/qrimage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.16000003"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/QRCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/QRImage"
        app:layout_constraintVertical_bias="0.13999999" />

    <ImageButton
        android:id="@+id/copyToClipboard"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corners_buttons"
        android:contentDescription="@string/copytoclipboard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toEndOf="@+id/QRCode"
        app:layout_constraintTop_toBottomOf="@+id/QRImage"
        app:layout_constraintVertical_bias="0.126"
        app:srcCompat="@drawable/copy_to_clipboard" />

    <Button
        android:id="@+id/confirmAuthenticationCode"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:background="@drawable/rounded_corners_buttons"
        android:text="@string/confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterAuthenticationCode"
        app:layout_constraintVertical_bias="0.18" />

    <EditText
        android:id="@+id/enterAuthenticationCode"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_the_authentication_code"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/QRCode"
        app:layout_constraintVertical_bias="0.17000002" />

    <TextView
        android:id="@+id/twoFAInstructions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/TwoFA_instructions"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04000002" />


</androidx.constraintlayout.widget.ConstraintLayout>
